# tui-framework-experiment

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: test.yml
examples/widgets/: app.rs
examples/widgets/tabs/: buttons.rs  stack.rs  toggle_switch.rs
src/: lib.rs  stack_container.rs  toggle_switch.rs
