[package]
name = "tui-framework-experiment"
version = "0.3.0"
authors = ["Joshka"]
description = "An set of harmonious Ratatui widgets with a goal of building a proper widget framework."
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshka/tui-framework-experiment"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.8.0"
crossterm = { version = "0.28.1", optional = true }
derive_builder = "0.20.2"
itertools = "0.14.0"
ratatui = { version = "0.29", features = [
    "unstable-widget-ref",
], default-features = false }
strum = { version = "0.27.0", features = ["derive"] }
termion = { version = "4.0.3", optional = true }
termwiz = { version = "0.22.0", optional = true }
thiserror = "2.0.11"

[dev-dependencies]
color-eyre = "0.6.3"
rand = "0.9.0"
rstest = "0.24.0"
strum = { version = "0.27.0", features = ["derive"] }
ratatui = { version = "0.29", features = ["unstable-widget-ref"] }

[features]
default = ["crossterm"]
